--- a/client/index.html
+++ b/client/index.html
@@ -144,7 +144,7 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="/js/jquery.js"></script>
+    <script src="/js/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="/js/bootstrap.min.js"></script>
@@ -156,7 +156,7 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="/js/grayscale.js"></script>
+    <script src="/js/grayscale.min.js"></script>
 
 </body>
 
